# ldapKIT

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: config.yml  userdir.yml
ldapKIT/: __init__.py  config.py  ldapKIT.py  particleldapchangemail  particleldapchangemail.py  particleldapgroup  particleldapgroup.py  particleldapresetpassword  particleldapresetpassword.py  particleldapuseradd  particleldapuseradd.py  particleldapuserdel  particleldapuserdel.py
