[build-system]
build-backend = "flit.buildapi"
requires = ["flit"]

[tool.flit.metadata]
module = "ldapKIT"
author = "Martin Gabelmann, Robin Roth"
author-email = "martin@gabelmann.biz"
home-page = "https://github.com/particleKIT/ldapKIT.git"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires = ["python_gitlab",
"xkcdpass",
"gnupg",
"python_ldap",
"PyYAML"]
description-file = "README.md"

[tool.flit.scripts]
particleldapchangemail      = "ldapKIT.particleldapchangemail:run"
particleldapgroup           = "ldapKIT.particleldapgroup:run"
particleldapresetpassword   = "ldapKIT.particleldapresetpassword:run"
particleldapuseradd         = "ldapKIT.particleldapuseradd:run"
particleldapuserdel         = "ldapKIT.particleldapuserdel:run"
